state/cavern/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: cavern
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
        - mountPath: /mnt/media
          name: media
      volumes:
      - name: config
        hostPath:
          path: /data/radarr
      - name: media
        persistentVolumeClaim:
          claimName: media
