state/cavern/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: cavern
  labels:
    app.kubernetes.io/name: radarr
spec:
  ports:
    - name: http
      targetPort: http
      port: 7878
      protocol: TCP
  selector:
    app.kubernetes.io/name: radarr
