state/cavern/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: cavern
  labels:
    app: radarr
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: radarr.h.valmil.net
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              name: http
        path: /
        pathType: Prefix
